notifications_aldo/last-runtime.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"StatefulSet","metadata":{"annotations":{},"creationTimestamp":"2025-10-17T20:44:48Z","generation":15,"name":"eventmesh-runtime-0-a","namespace":"default","ownerReferences":[{"apiVersion":"eventmesh-operator.eventmesh/v1","blockOwnerDeletion":true,"controller":true,"kind":"Runtime","name":"eventmesh-runtime","uid":"f791744b-e8c2-4c69-90dc-ea07f7501599"}],"resourceVersion":"16408","uid":"c75f0c69-f8b5-4398-b559-0087dcf92ddb"},"spec":{"persistentVolumeClaimRete [...]
  creationTimestamp: "2025-10-17T20:44:48Z"
  generation: 17
  name: eventmesh-runtime-0-a
  namespace: default
  ownerReferences:
  - apiVersion: eventmesh-operator.eventmesh/v1
    blockOwnerDeletion: true
    controller: true
    kind: Runtime
    name: eventmesh-runtime
    uid: f791744b-e8c2-4c69-90dc-ea07f7501599
  resourceVersion: "35614"
  uid: c75f0c69-f8b5-4398-b559-0087dcf92ddb
spec:
  persistentVolumeClaimRetentionPolicy:
    whenDeleted: Retain
    whenScaled: Retain
  podManagementPolicy: OrderedReady
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: eventmesh-runtime
  serviceName: ""
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/restartedAt: "2025-10-17T21:00:08-05:00"
      creationTimestamp: null
      labels:
        app: eventmesh-runtime
    spec:
      containers:
      - image: alonexc/eventmesh-runtime:runtime-1.9.0
        imagePullPolicy: IfNotPresent
        name: eventmesh-runtime
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /data/app/eventmesh/connectors
          name: connectors
        - mountPath: /opt/eventmesh/config/eventmesh-runtime.yml
          name: config-volume
          subPath: eventmesh-runtime.yml
        - mountPath: /data/app/eventmesh/conf/eventmesh.properties
          name: properties-volume
          subPath: eventmesh.properties
        - mountPath: /data/app/eventmesh/conf/server.env
          name: properties-volume
          subPath: server.env
        - mountPath: /data/app/eventmesh/conf/log4j2.xml
          name: properties-volume
          subPath: log4j2.xml
      dnsPolicy: ClusterFirstWithHostNet
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - configMap:
          defaultMode: 420
          name: eventmesh-properties
        name: properties-volume
      - configMap:
          defaultMode: 420
          name: eventmesh-config
        name: config-volume
      - configMap:
          defaultMode: 420
          name: eventmesh-connectors
        name: connectors
  updateStrategy:
    type: RollingUpdate
status:
  availableReplicas: 0
  collisionCount: 0
  currentReplicas: 1
  currentRevision: eventmesh-runtime-0-a-845d587969
  observedGeneration: 17
  replicas: 1
  updateRevision: eventmesh-runtime-0-a-845d587969
  updatedReplicas: 1
