notifications_aldo/notifications-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notifications
  namespace: default
  labels:
    app: notifications
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notifications
  template:
    metadata:
      labels:
        app: notifications
    spec:
      containers:
      - name: notifications
        image: public.ecr.aws/n7w5a8q2/notifications:v2
        imagePullPolicy: IfNotPresent   # 👈 usa tu imagen local de minikube
        ports:
        - containerPort: 9020
