notifications_aldo/notifications-kafkabroker.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: notifications-kafka
  namespace: notifications
  labels:
    app: notifications-kafka
spec:
  serviceName: "notifications-kafka"
  replicas: 1
  selector:
    matchLabels:
      app: notifications-kafka
  template:
    metadata:
      labels:
        app: notifications-kafka
    spec:
      containers:
        - name: kafka
          image: apache/kafka:3.7.0
          ports:
            - containerPort: 9092
              name: kafka-supply
          volumeMounts:
            - name: data
              mountPath: /var/lib/kafka/data
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 5Gi

---

apiVersion: v1
kind: Service
metadata:
  name: notifications-kafka
  namespace: notifications
spec:
  type: ClusterIP
  ports:
    - name: kafka
      port: 9092
      targetPort: 9092
    - name: controller
      port: 9093
      targetPort: 9093
  selector:
    app: notifications-kafka
