notifications_aldo/notifications-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notifications
  namespace: default
spec:
  selector:
    app: notifications
  type: ClusterIP
  ports:
  - name: http
    port: 9020
    targetPort: 9020
    protocol: TCP
