notifications_aldo/gateway-notification.yml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: medisupply-gateway
  namespace: default
spec:
  selector:
    istio: ingressgateway  # <-- este SÍ existe en tu istio-ingress pod
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
