notifications_aldo/notifications-virtualservice-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: notifications
  namespace: default
spec:
  hosts:
  - "*"
  gateways:
  - default/medisupply-gateway   # 👈 ahora todos comparten el mismo gateway
  http:
  - match:
    - uri:
        prefix: /event
    rewrite:
        uri: /fallo/cadenafrio
    route:
    - destination:
        host: notifications.default.svc.cluster.local
        port:
          number: 9020
